--- a/index.html
+++ b/index.html
@@ -1,72 +1,92 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Meleze.web : Remove whitespace in ASP.NET Razor views" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Meleze.web by meleze</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Meleze.web</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Meleze.web</h1>
+        <p>Remove whitespace in ASP.NET Razor views</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/meleze/Meleze.Web">View on GitHub</a>
+        <p class="view"><a href="https://github.com/meleze/Meleze.Web">View the Project on GitHub <small>meleze/Meleze.Web</small></a></p>
 
-          <h1 id="project_title">Meleze.web</h1>
-          <h2 id="project_tagline">Remove whitespace in ASP.NET Razor views</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/meleze/Meleze.Web/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/meleze/Meleze.Web/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/meleze/Meleze.Web/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/meleze/Meleze.Web/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/meleze/Meleze.Web">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <p>Meleze.Web is a plugin for ASP.NET Razor that removes all the whitespace in .cshtml views.</p>
 
 <p>For example, a view like:</p>
 
-<ul>
-<li>Item1</li>
-  <li><a href="https://github.com/variable" class="user-mention">@variable</a></li>
-</ul><p>is recompiled as:</p>
+<div class="highlight highlight-html"><pre><span class="nt">&lt;ul&gt;</span>
+  <span class="nt">&lt;li&gt;</span>Item1<span class="nt">&lt;/li&gt;</span>
+  <span class="nt">&lt;li&gt;</span>@variable<span class="nt">&lt;/li&gt;</span>
+<span class="nt">&lt;/ul&gt;</span>
+</pre></div>
 
-<ul>
-<li>Item1&gt;</li>
-<li><a href="https://github.com/variable" class="user-mention">@variable</a></li>
-</ul><p>Meleze.Web minifies the HTML markup and also the inlined CSS and Javascript elements when System.Web.Optimization or the Microsoft Minifier DLLs are loaded in the application.</p>
+<p>is recompiled as:</p>
 
-<p>Why is it better than a ASP.NET MVC view filter?
-With a view filter, the minification would be performed each time the view is rendered. It means the filter adds a little cost to each HTTP request.
+<div class="highlight highlight-html"><pre><span class="nt">&lt;ul&gt;&lt;li&gt;</span>Item1&gt;<span class="nt">&lt;li&gt;</span>@variable<span class="nt">&lt;/li&gt;&lt;/ul&gt;</span>
+</pre></div>
+
+<p>Meleze.Web minifies the HTML markup and also the inlined CSS and Javascript elements when System.Web.Optimization or the Microsoft Minifier DLLs are loaded in the application.</p>
+
+<h2>
+<a name="why-is-it-better-than-a-aspnet-mvc-view-filter" class="anchor" href="#why-is-it-better-than-a-aspnet-mvc-view-filter"><span class="octicon octicon-link"></span></a>Why is it better than a ASP.NET MVC view filter?</h2>
+
+<p>With a view filter, the minification would be performed each time the view is rendered. It means the filter adds a little cost to each HTTP request.
 Meleze.Web runs at COMPILE time. The views are minified only one time when Razor compiles the view. There is no minification cost when the view is rendered. It is even the opposite as the CPU has less characters to write.
 When minifying at compile time, you reduce the bandwidth usage and also the used CPU (arround 15% in my web applications).</p>
 
+<h2>
+<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
+
 <p>To use the HTML Minification for Razor, you have to change your Views/Web.config to replace the default ASP.NET MVC factory by the Meleze's one:</p>
 
-<p></p>
+<div class="highlight highlight-xml"><pre><span class="nt">&lt;configuration&gt;</span>
+  <span class="nt">&lt;system.web.webPages.razor&gt;</span>
+    <span class="nt">&lt;host</span> <span class="na">factoryType=</span><span class="s">"Meleze.Web.Razor.MinifyHtmlWebRazorHostFactory, Meleze.Web, Version=1.4.0.5, Culture=neutral, PublicKeyToken=0a868b5321967eda"</span> <span class="nt">/&gt;</span>
+  <span class="nt">&lt;/system.web.webPages.razor&gt;</span>
+<span class="nt">&lt;/configuration&gt;</span>
+</pre></div>
 
-<p>For ASP.NET MVC 3.0, use the 1.3 version of Meleze:
-    </p>
+<p>For ASP.NET MVC 3.0, use the 1.3 version of Meleze:</p>
 
-<p>There are two versions of the DLL: one for ASP.NET MVC3 and another for ASP.NET MVC4. Make sur to use the correct version (it is displayed in the DLL description).</p>
+<div class="highlight highlight-xml"><pre>    <span class="nt">&lt;host</span> <span class="na">factoryType=</span><span class="s">"Meleze.Web.Razor.MinifyHtmlWebRazorHostFactory, Meleze.Web, Version=1.3.0.5, Culture=neutral, PublicKeyToken=0a868b5321967eda"</span> <span class="nt">/&gt;</span>
+</pre></div>
 
-<p>Making this change in the Web.config may break Intelliscense in Visual Studio if it does not find the Meleze.Web dll.
-There are two solutions:
-1) You can setup the factory in Web.config.Release instead of the Web.config. The minification will be enabled only in release build.
-2) Otherwize, you can register the Meleze.Web dll in the GAC using "gacutil.exe -i Meleze.Web". The minification will work even in design mode.</p>
+<p>There are two versions of the DLL: one for ASP.NET MVC3 and another for ASP.NET MVC4. Make sure to use the correct version (it is displayed in the DLL description).</p>
 
-<p>The Minifier behavior can be configured in the application's root Web.config with some appSettings keys:</p>
+<p>Making this change in the Web.config may break Intelliscense in Visual Studio if it does not find the Meleze.Web dll.</p>
 
-<p></p>
+<p>There are two solutions:</p>
+
+<ol>
+<li>You can setup the factory in Web.config.Release instead of the Web.config. The minification will be enabled only in release build.</li>
+<li>Otherwize, you can register the Meleze.Web dll in the GAC using "gacutil.exe -i Meleze.Web". The minification will work even in design mode.</li>
+</ol><p>The Minifier behavior can be configured in the application's root Web.config with some appSettings keys:</p>
+
+<div class="highlight highlight-xml"><pre><span class="nt">&lt;appSettings&gt;</span>
+  <span class="nt">&lt;add</span> <span class="na">key=</span><span class="s">"meleze-minifier:Aggressive"</span> <span class="na">value=</span><span class="s">"true"</span><span class="nt">/&gt;</span>
+  <span class="nt">&lt;add</span> <span class="na">key=</span><span class="s">"meleze-minifier:Comments"</span> <span class="na">value=</span><span class="s">"true"</span><span class="nt">/&gt;</span>
+  <span class="nt">&lt;add</span> <span class="na">key=</span><span class="s">"meleze-minifier:Javascript"</span> <span class="na">value=</span><span class="s">"true"</span><span class="nt">/&gt;</span>
+  <span class="nt">&lt;add</span> <span class="na">key=</span><span class="s">"meleze-minifier:CSS"</span> <span class="na">value=</span><span class="s">"true"</span><span class="nt">/&gt;</span>
+<span class="nt">&lt;/appSettings&gt;</span>
+</pre></div>
 
 <p>meleze-minifier:Aggressive removes as much whitespace as possible. In some cases, you may have to change yours CSS to fix the page layout (as whitespace is not interpreted in a compatible way by all browsers).
 meleze-minifier:Comments removes all the HTML comments that are neither Javascript code or conditional comments.
@@ -113,16 +133,12 @@ meleze-minifier:CSS also calls the Microsoft Ajax Minifier to minimize the inlin
 </li>
 </ul>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Meleze.web maintained by <a href="https://github.com/meleze">meleze</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/meleze">meleze</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -133,7 +149,6 @@ meleze-minifier:CSS also calls the Microsoft Ajax Minifier to minimize the inlin
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
